Memperbaharui dependencies pada pom